# gnosys

./: MANIFEST.in  README.md  pyproject.toml  setup.py
gnosys/: __init__.py  cli.py
gnosys/templates/: .env.example  servers.json.template
